feat: update wallet platform and PWA