@@ -25,15 +25,21 @@ package global.goldenera.wallet.service.business;
 
 import static lombok.AccessLevel.PRIVATE;
 
+import java.math.BigInteger;
+import java.time.Duration;
 import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.tuweni.units.ethereum.Wei;
+import org.apache.tuweni.bytes.Bytes;
 import org.springframework.stereotype.Service;
 
 import global.goldenera.cryptoj.datatypes.Address;
+import global.goldenera.cryptoj.serialization.tx.TxDecoder;
 import global.goldenera.wallet.api.core.v1.wallet.dtos.MempoolRecommendedFeesDtoV1;
 import global.goldenera.wallet.api.core.v1.wallet.dtos.TokenDtoV1;
 import global.goldenera.wallet.api.core.v1.wallet.dtos.UnifiedTransferDtoV1;
@@ -46,8 +52,10 @@ import global.goldenera.wallet.client.node.model.v1.BulkTransferPageRequestV1;
 import global.goldenera.wallet.client.node.model.v1.MemTransferDtoV1;
 import global.goldenera.wallet.client.node.model.v1.MemTransferDtoV1Page;
 import global.goldenera.wallet.client.node.model.v1.MempoolResult;
-import global.goldenera.wallet.client.node.model.v1.TransferDtoV1;
 import global.goldenera.wallet.client.node.model.v1.TransferDtoV1Page;
+import global.goldenera.wallet.exceptions.GEFailedException;
+import global.goldenera.wallet.exceptions.GEValidationException;
+import global.goldenera.wallet.utils.PaginationUtil;
 import global.goldenera.wallet.service.node.BlockchainNodeService;
 import global.goldenera.wallet.service.node.ExplorerNodeService;
 import lombok.AllArgsConstructor;
@@ -66,266 +74,180 @@ public class WalletBusinessService {
     BlockchainNodeService blockchainNodeService;
     WalletMapper walletMapper;
 
-    /**
-     * Get balances for multiple addresses.
-     * Subtracts pending outgoing transactions from the balance.
-     *
-     * @param addresses
-     *            Set of wallet addresses
-     * @param tokenAddresses
-     *            Set of token addresses (null for native token only)
-     * @return List of wallet balances (adjusted for pending outgoing transactions)
-     */
+    public static final int MAX_ADDRESSES = 100;
+    private static final int PAGE_SIZE = 100;
+    private static final int MAX_RESULT_ROWS = 2_000;
+    private static final int MAX_BALANCE_PAGE_CALLS = 20;
+    private static final Duration BALANCE_QUERY_BUDGET = Duration.ofSeconds(10);
+    public static final int MAX_SIGNED_TX_BYTES = 100_000;
+
+    /** Returns all requested balances within a bounded node-query budget. */
     public List<WalletBalanceDtoV1> getBalances(Set<Address> addresses, Set<Address> tokenAddresses) {
-        int pageNumber = 0;
-        int pageSize = 100;
-        Long totalElements = 0L;
+        validateAddresses(addresses, tokenAddresses);
+        QueryBudget budget = new QueryBudget();
         List<WalletBalanceDtoV1> balances = new ArrayList<>();
-
-        AccountBalanceDtoV1Page page = null;
-
+        int pageNumber = 0;
+        long total;
         do {
-            page = explorerNodeService.getAccountBalancesBulk(pageNumber, pageSize, addresses,
-                    tokenAddresses);
-
+            budget.beforePage();
+            AccountBalanceDtoV1Page page = explorerNodeService.getAccountBalancesBulk(
+                    pageNumber++, PAGE_SIZE, addresses, tokenAddresses);
             if (page == null || page.getList() == null) {
-                break;
+                throw new GEFailedException("Node returned an invalid balance page");
             }
+            total = checkedTotal(page.getTotalElements());
+            checkResultLimit(total, balances.size() + page.getList().size());
+            checkPageCompleteness("balance", pageNumber - 1, total, page.getList().size());
+            balances.addAll(page.getList().stream().map(walletMapper::toWalletBalance).toList());
+        } while ((long) pageNumber * PAGE_SIZE < total);
 
-            totalElements = page.getTotalElements();
-            balances.addAll(page.getList().stream()
-                    .map(walletMapper::toWalletBalance)
-                    .collect(Collectors.toList()));
-
-            pageNumber++;
-        } while (pageNumber * pageSize < totalElements);
-
-        // Fetch all pending mempool transactions for the given addresses
-        List<MemTransferDtoV1> pendingTransfers = getAllPendingTransfers(addresses, tokenAddresses);
-
-        // Adjust balances by subtracting pending outgoing transactions
-        return balances.stream()
-                .map(balance -> adjustBalanceForPendingOutgoing(balance, pendingTransfers))
-                .collect(Collectors.toList());
+        Map<BalanceKey, BigInteger> outgoing = pendingOutgoing(addresses, budget);
+        return balances.stream().map(balance -> {
+            BigInteger pending = outgoing.getOrDefault(new BalanceKey(balance.address(), balance.tokenAddress()), BigInteger.ZERO);
+            BigInteger available = balance.spendableBalance().toBigInteger().subtract(pending).max(BigInteger.ZERO);
+            return new WalletBalanceDtoV1(balance.address(), balance.tokenAddress(), Wei.valueOf(available),
+                    balance.updatedAtBlockHeight(), balance.updatedAtTimestamp(), balance.totalBalance(),
+                    balance.lockedMiningReward(), balance.spendableBalance());
+        }).toList();
     }
 
-    /**
-     * Fetches all pending mempool transfers for the given addresses.
-     */
-    private List<MemTransferDtoV1> getAllPendingTransfers(Set<Address> addresses, Set<Address> tokenAddresses) {
-        List<MemTransferDtoV1> allPendingTransfers = new ArrayList<>();
-        int pendingPageNumber = 0;
-        int pendingPageSize = 100;
-        long pendingTotalElements = 0L;
-
+    /** All outgoing tokens are needed even when the result asks only for native balance. */
+    private Map<BalanceKey, BigInteger> pendingOutgoing(Set<Address> addresses, QueryBudget budget) {
+        Map<BalanceKey, BigInteger> outgoing = new HashMap<>();
+        Set<String> seenHashes = new HashSet<>();
+        int pageNumber = 0;
+        int fetched = 0;
+        long total;
         do {
-            MemTransferDtoV1Page pendingPage = explorerNodeService.getMemTransfersBulk(
-                    pendingPageNumber,
-                    pendingPageSize,
-                    addresses,
-                    tokenAddresses,
-                    null); // null for all transfer types
-
-            if (pendingPage == null || pendingPage.getList() == null) {
-                break;
+            budget.beforePage();
+            MemTransferDtoV1Page page = explorerNodeService.getOutgoingMemTransfersBulk(pageNumber++, PAGE_SIZE, addresses);
+            if (page == null || page.getList() == null) {
+                throw new GEFailedException("Node returned an invalid pending page");
             }
-
-            pendingTotalElements = pendingPage.getTotalElements() != null ? pendingPage.getTotalElements() : 0;
-            allPendingTransfers.addAll(pendingPage.getList());
-            pendingPageNumber++;
-        } while (pendingPageNumber * pendingPageSize < pendingTotalElements);
-
-        return allPendingTransfers;
-    }
-
-    /**
-     * Adjusts a balance by subtracting pending outgoing transactions.
-     * Only subtracts from outgoing transactions (where 'from' matches the balance
-     * address).
-     * For native token (Address.ZERO), the fee is also subtracted.
-     */
-    private WalletBalanceDtoV1 adjustBalanceForPendingOutgoing(WalletBalanceDtoV1 balance,
-            List<MemTransferDtoV1> pendingTransfers) {
-        Address balanceAddress = balance.address();
-        Address balanceTokenAddress = balance.tokenAddress();
-
-        Wei pendingOutgoingSum = Wei.ZERO;
-
-        for (MemTransferDtoV1 transfer : pendingTransfers) {
-            // Skip if this is not an outgoing transaction from this address
-            if (transfer.getFrom() == null
-                    || !Address.fromHexString(transfer.getFrom()).equals(balanceAddress)) {
-                continue;
-            }
-
-            // Check if token address matches (Address.ZERO for native token)
-            Address transferTokenAddress = transfer.getTokenAddress() != null
-                    ? Address.fromHexString(transfer.getTokenAddress())
-                    : Address.ZERO;
-            boolean isNativeToken = Address.ZERO.equals(balanceTokenAddress);
-            boolean tokenMatches = transferTokenAddress.equals(balanceTokenAddress);
-
-            if (tokenMatches) {
-                // Subtract the transfer amount
-                if (transfer.getAmount() != null && !transfer.getAmount().isEmpty()) {
-                    pendingOutgoingSum = pendingOutgoingSum
-                            .add(Wei.valueOf(new java.math.BigInteger(transfer.getAmount())));
+            total = checkedTotal(page.getTotalElements());
+            fetched += page.getList().size();
+            checkResultLimit(total, fetched);
+            checkPageCompleteness("pending", pageNumber - 1, total, page.getList().size());
+            for (MemTransferDtoV1 transfer : page.getList()) {
+                if (transfer.getHash() != null && !seenHashes.add(transfer.getHash())) {
+                    continue;
                 }
+                Address from = walletMapper.stringToAddress(transfer.getFrom());
+                if (!addresses.contains(from)) {
+                    continue;
+                }
+                Address token = walletMapper.stringToTokenAddress(transfer.getTokenAddress());
+                outgoing.merge(new BalanceKey(from, token), decimalOrZero(transfer.getAmount()), BigInteger::add);
+                outgoing.merge(new BalanceKey(from, Address.ZERO), decimalOrZero(transfer.getFee()), BigInteger::add);
             }
-
-            // For native token balance, also subtract the fee from all outgoing
-            // transactions
-            if (isNativeToken && transfer.getFee() != null && !transfer.getFee().isEmpty()) {
-                pendingOutgoingSum = pendingOutgoingSum.add(Wei.valueOf(new java.math.BigInteger(transfer.getFee())));
-            }
-        }
-
-        // If no pending outgoing, return original balance
-        if (pendingOutgoingSum.equals(Wei.ZERO)) {
-            return balance;
-        }
-
-        // Calculate adjusted balance (ensure it doesn't go negative)
-        Wei adjustedBalance;
-        if (pendingOutgoingSum.compareTo(balance.balance()) > 0) {
-            adjustedBalance = Wei.ZERO;
-        } else {
-            adjustedBalance = balance.balance().subtract(pendingOutgoingSum);
-        }
-
-        return new WalletBalanceDtoV1(
-                balance.address(),
-                balance.tokenAddress(),
-                adjustedBalance,
-                balance.updatedAtBlockHeight(),
-                balance.updatedAtTimestamp());
+        } while ((long) pageNumber * PAGE_SIZE < total);
+        return outgoing;
     }
 
-    /**
-     * Get unified transfer history for multiple addresses.
-     * Combines pending (mempool) transfers first, then confirmed transfers.
-     * 
-     * Algorithm:
-     * 1. Get total count of pending and confirmed transfers
-     * 2. Calculate which items belong to the requested page
-     * 3. If page starts within pending items - fetch pending first, then fill with
-     * confirmed
-     * 4. If page starts after pending items - fetch only confirmed with adjusted
-     * offset
-     *
-     * @param addresses
-     *            Set of wallet addresses
-     * @param tokenAddresses
-     *            Set of token addresses (null for all tokens)
-     * @param pageNumber
-     *            Page number (0-indexed)
-     * @param pageSize
-     *            Page size
-     * @return Paginated unified transfers
-     */
+    private BigInteger decimalOrZero(String value) {
+        BigInteger result = value == null || value.isBlank() ? BigInteger.ZERO : new BigInteger(value);
+        if (result.signum() < 0) {
+            throw new GEFailedException("Node returned a negative pending amount");
+        }
+        return result;
+    }
+
+    private record BalanceKey(Address address, Address token) { }
+
+    private static final class QueryBudget {
+        private final long started = System.nanoTime();
+        private int calls;
+
+        void beforePage() {
+            if (++calls > MAX_BALANCE_PAGE_CALLS || System.nanoTime() - started > BALANCE_QUERY_BUDGET.toNanos()) {
+                throw new GEValidationException("Wallet query is too large; request fewer addresses or tokens");
+            }
+        }
+    }
+
+    private static void checkResultLimit(long total, int fetched) {
+        if (total > MAX_RESULT_ROWS || fetched > MAX_RESULT_ROWS) {
+            throw new GEValidationException("Wallet result exceeds 2000 rows; request fewer addresses or tokens");
+        }
+    }
+
+    private static void checkPageCompleteness(String kind, int pageNumber, long total, int actualRows) {
+        long remaining = Math.max(0L, total - (long) pageNumber * PAGE_SIZE);
+        long expectedRows = Math.min(PAGE_SIZE, remaining);
+        if (actualRows != expectedRows) {
+            throw new GEFailedException("Node returned an incomplete or inconsistent " + kind + " page");
+        }
+    }
+
+    private static long checkedTotal(Long total) {
+        if (total == null || total < 0) {
+            throw new GEFailedException("Node returned an invalid page count");
+        }
+        return total;
+    }
+
+    private static void validateAddresses(Set<Address> addresses, Set<Address> tokenAddresses) {
+        if (addresses == null || addresses.isEmpty() || addresses.size() > MAX_ADDRESSES
+                || addresses.stream().anyMatch(address -> address == null)) {
+            throw new GEValidationException("Provide between 1 and 100 valid wallet addresses");
+        }
+        if (tokenAddresses == null || tokenAddresses.size() > MAX_ADDRESSES
+                || tokenAddresses.stream().anyMatch(address -> address == null)) {
+            throw new GEValidationException("Provide at most 100 valid token addresses");
+        }
+    }
+
+    /** Pending rows precede confirmed rows; confirmed offsets need not align with node pages. */
     public UnifiedTransferPageDtoV1 getTransfers(Set<Address> addresses, Set<Address> tokenAddresses, int pageNumber,
             int pageSize, TransferTypeEnum transferType) {
+        validateAddresses(addresses, tokenAddresses);
+        PaginationUtil.validatePageRequest(pageNumber, pageSize);
         Long currentBlockHeight = blockchainNodeService.getLatestBlockHeight();
-
-        // Fetch pending transfers for the requested page (filtered by addresses)
         MemTransferDtoV1Page pendingPage = explorerNodeService.getMemTransfersBulk(
-                pageNumber,
-                pageSize,
-                addresses,
-                tokenAddresses,
-                transferType);
-
-        // Get filtered count from page response (this is the count for these specific
-        // addresses)
-        long pendingCount = pendingPage != null && pendingPage.getTotalElements() != null
-                ? pendingPage.getTotalElements()
-                : 0;
-        int pendingCountInt = (int) pendingCount;
-
-        // Calculate offset based on page
-        int offset = pageNumber * pageSize;
-
+                pageNumber, pageSize, addresses, tokenAddresses, transferType);
+        if (pendingPage == null || pendingPage.getList() == null) {
+            throw new GEFailedException("Node returned an invalid pending page");
+        }
+        long pendingCount = checkedTotal(pendingPage.getTotalElements());
+        long offset = (long) pageNumber * pageSize;
         List<UnifiedTransferDtoV1> content = new ArrayList<>();
-        long confirmedCount = 0;
-
-        if (offset < pendingCountInt) {
-            // Page starts within pending transfers
-            if (pendingPage != null && pendingPage.getList() != null) {
-                for (MemTransferDtoV1 pending : pendingPage.getList()) {
-                    content.add(walletMapper.toUnifiedTransfer(pending));
+        if (offset < pendingCount) {
+            pendingPage.getList().stream().limit(pageSize).map(walletMapper::toUnifiedTransfer).forEach(content::add);
+        }
+        BulkTransferPageRequestV1.TypeEnum confirmedType = transferType == null ? null
+                : BulkTransferPageRequestV1.TypeEnum.fromValue(transferType.name());
+        long confirmedOffset = Math.max(0, offset - pendingCount);
+        int confirmedPageNumber = (int) (confirmedOffset / pageSize);
+        int withinPage = (int) (confirmedOffset % pageSize);
+        boolean countOnly = content.size() == pageSize;
+        TransferDtoV1Page confirmedPage = explorerNodeService.getTransfersBulk(
+                countOnly ? 0 : confirmedPageNumber, countOnly ? 1 : pageSize, addresses, tokenAddresses, confirmedType);
+        if (confirmedPage == null || confirmedPage.getList() == null) {
+            throw new GEFailedException("Node returned an invalid confirmed page");
+        }
+        long confirmedCount = checkedTotal(confirmedPage.getTotalElements());
+        if (!countOnly) {
+            addConfirmed(content, confirmedPage, withinPage, pageSize, currentBlockHeight);
+            if (content.size() < pageSize && (long) (confirmedPageNumber + 1) * pageSize < confirmedCount) {
+                TransferDtoV1Page next = explorerNodeService.getTransfersBulk(
+                        confirmedPageNumber + 1, pageSize, addresses, tokenAddresses, confirmedType);
+                if (next == null || next.getList() == null) {
+                    throw new GEFailedException("Node returned an invalid confirmed page");
                 }
-            }
-
-            // If we need more items, fetch confirmed transfers
-            int remainingSlots = pageSize - content.size();
-            if (remainingSlots > 0) {
-                TransferDtoV1Page confirmedPage = explorerNodeService.getTransfersBulk(
-                        0, // start from beginning of confirmed
-                        remainingSlots,
-                        addresses,
-                        tokenAddresses,
-                        transferType != null ? BulkTransferPageRequestV1.TypeEnum.fromValue(transferType.name())
-                                : null);
-
-                if (confirmedPage != null) {
-                    confirmedCount = confirmedPage.getTotalElements() != null
-                            ? confirmedPage.getTotalElements()
-                            : 0;
-                    if (confirmedPage.getList() != null) {
-                        for (TransferDtoV1 confirmed : confirmedPage.getList()) {
-                            content.add(walletMapper.toUnifiedTransferWithConfirmations(confirmed, currentBlockHeight));
-                        }
-                    }
-                }
-            } else {
-                // Still need to get confirmed count for totalElements calculation
-                TransferDtoV1Page confirmedPage = explorerNodeService.getTransfersBulk(
-                        0, 1, addresses, tokenAddresses,
-                        transferType != null ? BulkTransferPageRequestV1.TypeEnum.fromValue(transferType.name())
-                                : null);
-                if (confirmedPage != null && confirmedPage.getTotalElements() != null) {
-                    confirmedCount = confirmedPage.getTotalElements();
-                }
-            }
-        } else {
-            // Page starts after all pending transfers - only fetch confirmed
-            int confirmedOffset = offset - pendingCountInt;
-            int confirmedPageNumber = confirmedOffset / pageSize;
-
-            TransferDtoV1Page confirmedPage = explorerNodeService.getTransfersBulk(
-                    confirmedPageNumber,
-                    pageSize,
-                    addresses,
-                    tokenAddresses,
-                    transferType != null ? BulkTransferPageRequestV1.TypeEnum.fromValue(transferType.name()) : null);
-
-            if (confirmedPage != null) {
-                confirmedCount = confirmedPage.getTotalElements() != null
-                        ? confirmedPage.getTotalElements()
-                        : 0;
-                if (confirmedPage.getList() != null) {
-                    for (TransferDtoV1 confirmed : confirmedPage.getList()) {
-                        content.add(walletMapper.toUnifiedTransferWithConfirmations(confirmed, currentBlockHeight));
-                    }
-                }
+                addConfirmed(content, next, 0, pageSize, currentBlockHeight);
             }
         }
+        long totalElements = Math.addExact(pendingCount, confirmedCount);
+        int totalPages = (int) Math.min(Integer.MAX_VALUE, Math.max(1, totalElements / pageSize + (totalElements % pageSize == 0 ? 0 : 1)));
+        return new UnifiedTransferPageDtoV1(content, pageNumber, pageSize, totalElements, totalPages,
+                pendingCount, confirmedCount, pageNumber == 0, pageNumber >= totalPages - 1);
+    }
 
-        long totalElements = pendingCount + confirmedCount;
-        int totalPages = (int) Math.ceil((double) totalElements / pageSize);
-        if (totalPages == 0)
-            totalPages = 1;
-
-        return new UnifiedTransferPageDtoV1(
-                content,
-                pageNumber,
-                pageSize,
-                totalElements,
-                totalPages,
-                pendingCount,
-                confirmedCount,
-                pageNumber == 0,
-                pageNumber >= totalPages - 1);
+    private void addConfirmed(List<UnifiedTransferDtoV1> content, TransferDtoV1Page page, int skip, int pageSize,
+            Long currentBlockHeight) {
+        page.getList().stream().skip(skip).limit(pageSize - content.size())
+                .map(transfer -> walletMapper.toUnifiedTransferWithConfirmations(transfer, currentBlockHeight))
+                .forEach(content::add);
     }
 
     /**
@@ -345,7 +267,30 @@ public class WalletBusinessService {
     }
 
     public MempoolResult submitTransaction(String hexData) {
+        validateSignedTransaction(hexData);
         return blockchainNodeService.submitTransaction(hexData);
+    }
+
+    private static void validateSignedTransaction(String hexData) {
+        if (hexData == null || hexData.length() < 4 || hexData.length() > 2 + 2 * MAX_SIGNED_TX_BYTES
+                || !hexData.matches("^0x(?:[0-9a-fA-F]{2})+$")) {
+            throw new GEValidationException("Invalid signed transaction encoding");
+        }
+        try {
+            Bytes raw = Bytes.fromHexString(hexData);
+            if (raw.isEmpty() || raw.size() > MAX_SIGNED_TX_BYTES) {
+                throw new GEValidationException("Signed transaction exceeds the supported size");
+            }
+            var transaction = TxDecoder.INSTANCE.decode(raw);
+            if (transaction.getSignature() == null) {
+                throw new GEValidationException("Transaction must be signed");
+            }
+            transaction.getSender();
+        } catch (GEValidationException exception) {
+            throw exception;
+        } catch (RuntimeException exception) {
+            throw new GEValidationException("Invalid signed transaction");
+        }
     }
 
     public Long getNextNonce(Address address) {
